build_log_45_v3.txt
[ 16%] Built target shaders_spirv
[ 18%] Building CXX object CMakeFiles/sisterapp.dir/src/core/application.cpp.o
/run/media/jpereiratrindade/labeco10T/dev/cpp/SisterAppEngine_base_v330/src/core/application.cpp: In member function ‘void core::Application::render(size_t)’:
/run/media/jpereiratrindade/labeco10T/dev/cpp/SisterAppEngine_base_v330/src/core/application.cpp:636:53: error: cannot convert ‘int’ to ‘const graphics::Camera&’
  636 |         voxelScene_->render(cmd, mvp, visibleCount, totalChunks, pendingTasks, pendingVeg);
      |                                                     ^~~~~~~~~~~
      |                                                     |
      |                                                     int
In file included from /run/media/jpereiratrindade/labeco10T/dev/cpp/SisterAppEngine_base_v330/src/core/application.h:10,
                 from /run/media/jpereiratrindade/labeco10T/dev/cpp/SisterAppEngine_base_v330/src/core/application.cpp:1:
/run/media/jpereiratrindade/labeco10T/dev/cpp/SisterAppEngine_base_v330/src/core/../voxel_scene.h:36:100: note: initializing argument 4 of ‘void VoxelScene::render(VkCommandBuffer, const float*, const float*, const graphics::Camera&, VoxelSceneStats&, VkExtent2D) const’
   36 |     void render(VkCommandBuffer cmd, const float* view, const float* proj, const graphics::Camera& cam, VoxelSceneStats& outStats, VkExtent2D extent) const;
      |                                                                            ~~~~~~~~~~~~~~~~~~~~~~~~^~~
gmake[2]: *** [CMakeFiles/sisterapp.dir/build.make:205: CMakeFiles/sisterapp.dir/src/core/application.cpp.o] Error 1
gmake[1]: *** [CMakeFiles/Makefile2:90: CMakeFiles/sisterapp.dir/all] Error 2
gmake: *** [Makefile:91: all] Error 2
